Update various auto-formatting errors

--- a/_mdx/projects/ai/virtual-assistant.mdx
+++ b/_mdx/projects/ai/virtual-assistant.mdx
@@ -42,6 +42,7 @@ A virtual assistant application allows users to interact with a natural language
 Here is some sample code to get you started with a Flask web server:
 
 </p>
+
 ```python
 from flask import Flask, request, jsonify
 
@@ -55,7 +56,9 @@ if **name** == '**main**':
 app.run()
 
 ```
+
 <p>
-This code creates a simple Flask app with a single route that returns a greeting when accessed. You can then build on this foundation by adding the chat interface and natural language processing functionality.
+  This code creates a simple Flask app with a single route that returns a
+  greeting when accessed. You can then build on this foundation by adding the
+  chat interface and natural language processing functionality.
 </p>
-```
