--- a/_mdx/projects/backend/blogging-platform.mdx
+++ b/_mdx/projects/backend/blogging-platform.mdx
@@ -6,15 +6,44 @@ expertise: intermediate
 thumbId: qB249VQDUnE
 ---
 
-A blogging platform API allows users to create, edit, and delete posts using a server-side language and a database like MongoDB. In this project, you will build a simple blogging platform API using Java and MongoDB.
+In this project, we will be building a backend API for a blogging platform using Java and MongoDB. The API will allow users to create, read, update, and delete blog posts and comments. It will also include features such as authentication, authorization, and pagination.
 
-<h1>Create a Simple Blogging Platform API</h1>
-<h2>Requirements</h2>
+<h1>Project Checklist</h1>
 <ul>
-  <li>A way for users to create new posts</li>
-  <li>A way for users to edit and delete their own posts</li>
-  <li>A way to store the posts in a MongoDB database</li>
   <li>
-    A way to retrieve the posts from the database and display them to users
+    Design and implement a backend API for a blogging platform using Java and
+    MongoDB
   </li>
+  <li>Include CRUD operations for blog posts and comments</li>
+  <li>Implement authentication and authorization for users</li>
+  <li>Add pagination for large datasets</li>
+  <li>Test and debug the API using sample data</li>
 </ul>
+<h2>Bonus Project Checklist Items</h2>
+<ul>
+  <li>Add additional features such as tagging or user profiles</li>
+  <li>Implement server-side rendering or caching</li>
+</ul>
+<h2>Inspiration (Any companies/libraries similar)</h2>
+<ul>
+  <li>Blog API</li>
+  <li>Backend API</li>
+</ul>
+<h2>Hint/Code snippet to start</h2>
+To get started, you can use the following code snippet to set up a basic Java server
+and connect to a MongoDB database using Spring Boot:
+
+```java
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+
+@SpringBootApplication
+public class BlogApiApplication {
+
+  public static void main(String[] args) {
+    SpringApplication.run(BlogApiApplication.class, args);
+  }
+}
+```
+
+This code uses the Spring Boot framework to set up a basic Java server. You can use this code snippet as a starting point to build the backend API for your blogging platform. Note that you can also use any other Java framework if you prefer.
