--- a/_mdx/projects/backend/news-aggregator.mdx
+++ b/_mdx/projects/backend/news-aggregator.mdx
@@ -36,19 +36,22 @@ A news aggregator application allows users to view and search for news articles 
 Here is some sample code to get you started with a Spring web server:
 
 </p>
+
 ```java
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 @SpringBootApplication
 public class NewsAggregatorApplication {
-public static void main(String[] args) {
-SpringApplication.run(NewsAggregatorApplication.class, args);
-}
-}
 
+  public static void main(String[] args) {
+    SpringApplication.run(NewsAggregatorApplication.class, args);
+  }
+}
 ```
+
 <p>
-This code creates a basic Spring app that can be run using the `main` method. You can then build on this foundation by adding the news API integration and database functionality.
+  This code creates a basic Spring app that can be run using the `main` method.
+  You can then build on this foundation by adding the news API integration and
+  database functionality.
 </p>
-```
