--- a/_mdx/projects/backend/pokemon-rest-api.mdx
+++ b/_mdx/projects/backend/pokemon-rest-api.mdx
@@ -1,14 +1,14 @@
 ---
-title: Pokemon Rest API
-tags: java, micro-service, backend
-description: Simple RESTful API that will allow either all Pokemon OR By Generation.
+title: Create a Pokémon REST API
+tags: web development, API, backend, Pokémon
+description: Build a REST API for managing a database of Pokémon
 expertise: beginner
-thumbId: DypO_XgAE4Y
+thumbId: P7gF_dvZ-7w
 ---
 
-Much like PokeAPI, have an endpoint (doesn't matter what framework IF any you use) return a set of pokemon.
+In this project, we will be building a REST API for managing a database of Pokémon. The API will allow users to retrieve a list of Pokémon, a single Pokémon by ID, and Pokémon by type. It will also include features such as adding, updating, and deleting Pokémon from the database.
 
-bunch of pokemon to use:
+Some of pokemon to use:
 
 ```json
 [
@@ -33,26 +33,58 @@ bunch of pokemon to use:
 ]
 ```
 
-<h1>Create a Pokémon REST API</h1>
-<h2>Requirements</h2>
+<h1>Project Checklist</h1>
+<ul>
+  <li>Design and implement a REST API for managing a database of Pokémon</li>
+  <li>
+    Include routes for retrieving a list of Pokémon, a single Pokémon by ID, and
+    Pokémon by type
+  </li>
+  <li>Allow users to add, update, and delete Pokémon from the database</li>
+  <li>Test and debug the API using sample data</li>
+</ul>
+<h2>Bonus Project Checklist Items</h2>
 <ul>
   <li>
-    A database of Pokémon with their names, types, and other relevant attributes
+    Add authentication and authorization to the API, so that only authorized
+    users can make certain types of requests
   </li>
-  <li>
-    Routes for retrieving a list of Pokémon, a single Pokémon by ID, and Pokémon
-    by type
-  </li>
-  <li>A way to add, update, and delete Pokémon from the database</li>
+  <li>Add support for pagination and filtering to the list of Pokémon route</li>
 </ul>
-<h2>Bonus</h2>
+<h2>Inspiration (Any companies/libraries similar)</h2>
 <ul>
-  <li>
-    Can you add authentication and authorization to the API, so that only
-    authorized users can make certain types of requests?
-  </li>
-  <li>
-    Can you add support for pagination and filtering to the list of Pokémon
-    route?
-  </li>
+  <li>PokéAPI</li>
+  <li>Pokémon REST API</li>
 </ul>
+<h2>Hint/Code snippet to start</h2>
+To get started, you can use the following code snippet to set up a basic REST API
+using a framework such as Express.js:
+
+```javascript
+const express = require('express')
+const app = express()
+
+app.get('/pokemon', (req, res) => {
+  // Return a list of Pokémon from the database
+})
+
+app.get('/pokemon/:id', (req, res) => {
+  // Return a single Pokémon by ID from the database
+})
+
+app.post('/pokemon', (req, res) => {
+  // Add a new Pokémon to the database
+})
+
+app.put('/pokemon/:id', (req, res) => {
+  // Update a Pokémon by ID in the database
+})
+
+app.delete('/pokemon/:id', (req, res) => {
+  // Delete a Pokémon by ID from the database
+})
+
+app.listen(3000, () => console.log('API listening on port 3000'))
+```
+
+This code sets up a basic REST API with routes for retrieving a list of Pokémon, a single Pokémon by ID, and adding, updating, and deleting Pokémon from the database. You can use this code snippet as a starting point to build the Pokémon REST API.
