--- a/_mdx/projects/backend/real-estate-listings.mdx
+++ b/_mdx/projects/backend/real-estate-listings.mdx
@@ -36,20 +36,23 @@ A real estate listings application allows users to view and search for property 
 Here is some sample code to get you started with a Spring web server:
 
 </p>
+
 ```java
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+
 @SpringBootApplication
 public class RealEstateListingsApplication {
 
-public static void main(String[] args) {
-SpringApplication.run(RealEstateListingsApplication.class, args);
+  public static void main(String[] args) {
+    SpringApplication.run(RealEstateListingsApplication.class, args);
+  }
 }
-
-}
-
 ```
+
 <p>
-  This code creates a simple Spring app with a main class that runs the application. You can then build on this foundation by adding the database and template engine functionality.
+  This code creates a simple Spring app with a main class that runs the
+  application. You can then build on this foundation by adding the database and
+  template engine functionality.
 </p>
 ```
