--- a/_mdx/projects/data/simple-data-visuals.mdx
+++ b/_mdx/projects/data/simple-data-visuals.mdx
@@ -8,7 +8,7 @@ thumbId: JKUTrJ4vK00
 
 A data analysis and visualization program allows users to analyze and visualize data using Rust and a library like Gnuplot or Plotters. In this project, you will create a basic data analysis and visualization program using Rust.
 
-<h1>Create a Basic Data Analysis and Visualization Program</h1>
+<h1>Create a Basic Data Analysis and Visualization Program</h1>j
 <h2>Requirements</h2>
 <ul>
   <li>A way to import and manipulate data using Rust</li>
