--- a/_mdx/projects/frontend/basic-image-gallery.mdx
+++ b/_mdx/projects/frontend/basic-image-gallery.mdx
@@ -6,23 +6,45 @@ expertise: beginner
 thumbId: cYyqhdbJ9TI
 ---
 
-An image gallery is a common feature on websites that allows users to browse a collection of images. In this project, you will create a basic image gallery using HTML, CSS, and JavaScript.
+In this project, we will be building a basic image gallery that allows users to browse a collection of images and view a larger version with a lightbox effect. The gallery will also include navigation buttons for moving between images.
 
-<h1>Create a Basic Image Gallery</h1>
-<h2>Requirements</h2>
+<h1>Project Checklist</h1>
 <ul>
-  <li>A grid of images that can be clicked to view a larger version</li>
-  <li>A lightbox effect for displaying the larger version of the image</li>
-  <li>Navigation buttons for moving between images in the gallery</li>
+  <li>Design and implement an image gallery using HTML, CSS, and JavaScript</li>
+  <li>Create a grid of images that can be clicked to view a larger version</li>
+  <li>
+    Implement a lightbox effect for displaying the larger version of the image
+  </li>
+  <li>Add navigation buttons for moving between images in the gallery</li>
+  <li>Test and debug the image gallery using sample data</li>
 </ul>
-<h2>Bonus</h2>
+<h2>Bonus Project Checklist Items</h2>
 <ul>
   <li>
-    Can you add a feature that allows users to filter the images by tags or
-    categories?
+    Add a feature that allows users to filter the images by tags or categories
   </li>
   <li>
-    Can you add a feature that allows users to upload their own images to the
-    gallery?
+    Add a feature that allows users to upload their own images to the gallery
   </li>
 </ul>
+<h2>Inspiration (Any companies/libraries similar)</h2>
+<ul>
+  <li>Image Gallery</li>
+  <li>Lightbox</li>
+</ul>
+<h2>Hint/Code snippet to start</h2>
+To get started, you can use the following code snippet to set up the basic HTML structure
+for the image gallery:
+
+```html
+<div class="image-gallery">
+  <div class="image-grid">
+    <!-- Add image elements here -->
+  </div>
+  <div class="lightbox">
+    <!-- Add the lightbox content here -->
+  </div>
+</div>
+```
+
+This code creates a container for the image gallery and divides it into two sections: a grid of images and a lightbox for displaying the larger version of an image. You can then add the desired images and content to these sections and style them with CSS.
