--- a/_mdx/projects/frontend/initial-react.mdx
+++ b/_mdx/projects/frontend/initial-react.mdx
@@ -1,10 +1,44 @@
 ---
-title: Simple React
-tags: react, web
-expertise: intermediate
+title: JavaScript Fundamentals
+tags: web development, JavaScript
+description: Learn the basics of JavaScript programming
+expertise: beginner
+thumbId: 7hZ2iCot8Wk
 ---
-If this is your first project, please please go look at some of the Vanilla JS first.
 
-Javascript fundamentals is vital to understanding react.
+In this project, we will be focusing on the fundamentals of JavaScript programming. This includes concepts such as variables, data types, loops, functions, and more. It is recommended that you have a basic understanding of HTML and CSS before attempting this project.
+
+<h1>Project Checklist</h1>
+<ul>
+  <li>Learn the basic syntax and structure of JavaScript</li>
+  <li>Understand and use variables and data types</li>
+  <li>Use loops and control structures to perform repetitive tasks</li>
+  <li>Define and call functions to modularize code</li>
+  <li>Work with arrays and objects</li>
+</ul>
+<h2>Bonus Project Checklist Items</h2>
+<ul>
+  <li>
+    Explore advanced concepts such as object-oriented programming and
+    asynchronous programming
+  </li>
+  <li>Build a simple application using JavaScript</li>
+</ul>
+<h2>Inspiration (Any companies/libraries similar)</h2>
+<ul>
+  <li>JavaScript Fundamentals</li>
+  <li>Web Development Fundamentals</li>
+</ul>
+<h2>Hint/Code snippet to start</h2>
+To get started, you can use the following code snippet to declare a variable and
+assign it a value in JavaScript:
 
 
+```javascript
+let message = 'Hello, world!'; console.log(message);
+// Outputs: "Hello, world!"
+
+```
+
+
+This code declares a variable called message and assigns it the value 'Hello, world!'. The console.log() function is then used to print the value of the message variable to the console. You can use this code snippet as a starting point to explore the basics of JavaScript programming.
