--- a/_mdx/projects/frontend/to-do-list.mdx
+++ b/_mdx/projects/frontend/to-do-list.mdx
@@ -1,31 +1,68 @@
 ---
-title: To-do List
-tags: javascript, html, css
-description: simple to-do list application using HTML, CSS, and JavaScript
-expertise: beginner
-thumbId: pcpsVsyFp_s
+title: Build a Web-Based To-Do List
+tags: web development, to-do list, front-end
+description: Create a simple web-based to-do list application to manage tasks and keep track of progress
+expertise: easy
+thumbId: o2rO6GJ7VuQ
 ---
 
-We've made them all, on paper and on apps.
+In this project, we will be building a simple web-based to-do list application to manage tasks and keep track of progress. This can be useful for personal organization or for tracking team tasks and project milestones.
 
-Now its time to make your own!
-
-<h1>Create a super simple To-Do List app.</h1>
-
-<h2>Requirements</h2>
-<ul>
-  <li>Add custom text to list</li>
-  <li>An 'X' button that can complete an item</li>
-</ul>
-
-<h2>Bonus</h2>
+<h1>Project Checklist</h1>
 <ul>
   <li>
-    Can you add another button per item that allows you to delete, even if not
-    done?
+    Design and implement a web-based to-do list application using HTML, CSS, and
+    JavaScript
   </li>
   <li>
-    Can you make it store my to-do list so that when I reload the page my list
-    persists?
+    Implement features such as adding, editing, and deleting tasks, marking
+    tasks as complete, and sorting and filtering tasks
+  </li>
+  <li>Test and debug the application using sample data</li>
+</ul>
+<h2>Bonus Project Checklist Items</h2>
+<ul>
+  <li>
+    Implement a system for storing and retrieving tasks using a database or
+    local storage
+  </li>
+  <li>
+    Add additional customization options, such as changing the appearance or
+    adding themes
+  </li>
+  <li>
+    Integrate the application with a task management library or API, such as
+    Todoist or Trello
   </li>
 </ul>
+<h2>Inspiration (Any companies/libraries similar)</h2>
+<ul>
+  <li>Todoist</li>
+  <li>Asana</li>
+  <li>Trello</li>
+</ul>
+<h2>Hint/Code snippet to start</h2>
+
+To get started, you can use the following code snippet to set up a basic to-do list application using HTML, CSS, and JavaScript:
+
+```html
+<html>
+  <head>
+    <title>To-Do List</title>
+  </head>
+  <body>
+    <h1>To-Do List</h1>
+    <form id="add-task-form">
+      <input type="text" id="task-input" placeholder="Enter a task..." />
+      <button type="submit">Add Task</button>
+    </form>
+    <ul id="task-list"></ul>
+  </body>
+  <style>
+    /* Add some basic styling for the to-do list */
+  </style>
+  <script>
+    // ToDoList logic in here.
+  </script>
+</html>
+```
