--- a/_mdx/projects/frontend/virtual-reality-image-gallery.mdx
+++ b/_mdx/projects/frontend/virtual-reality-image-gallery.mdx
@@ -41,74 +41,83 @@ A virtual reality experience creator allows users to create and share their own 
 Here is an example of ThreeJS code to give you an idea of how to start.
 
 </p>
+
 ```javascript
 // import three.js library
-import * as THREE from 'three';
+import * as THREE from 'three'
 
 // create a canvas element to render the scene
-const canvas = document.createElement('canvas');
-document.body.appendChild(canvas);
+const canvas = document.createElement('canvas')
+document.body.appendChild(canvas)
 
 // create a WebGLRenderer to render the scene
-const renderer = new THREE.WebGLRenderer({ canvas });
+const renderer = new THREE.WebGLRenderer({ canvas })
 
 // set the size of the renderer to match the canvas
-renderer.setSize(canvas.clientWidth, canvas.clientHeight);
+renderer.setSize(canvas.clientWidth, canvas.clientHeight)
 
 // create a scene to hold the VR experience
-const scene = new THREE.Scene();
+const scene = new THREE.Scene()
 
 // create a camera to view the scene
-const camera = new THREE.PerspectiveCamera(45, canvas.clientWidth / canvas.clientHeight, 0.1, 1000);
+const camera = new THREE.PerspectiveCamera(
+  45,
+  canvas.clientWidth / canvas.clientHeight,
+  0.1,
+  1000,
+)
 
 // add the camera to the scene
-scene.add(camera);
+scene.add(camera)
 
 // create a VRControls object to handle VR input
-const controls = new THREE.VRControls(camera);
+const controls = new THREE.VRControls(camera)
 
 // create a VREffect object to handle VR rendering
-const effect = new THREE.VREffect(renderer);
+const effect = new THREE.VREffect(renderer)
 
 // create a VRDisplay object to handle VR display
-const display = new THREE.VRDisplay();
+const display = new THREE.VRDisplay()
 
 // create a VRManager object to handle VR management
-const manager = new THREE.VRManager(renderer, effect, display);
+const manager = new THREE.VRManager(renderer, effect, display)
 
 // add objects to the scene
 
 // create a cube
-const cubeGeometry = new THREE.BoxGeometry(1, 1, 1);
-const cubeMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-const cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
+const cubeGeometry = new THREE.BoxGeometry(1, 1, 1)
+const cubeMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 })
+const cube = new THREE.Mesh(cubeGeometry, cubeMaterial)
 
 // add the cube to the scene
-scene.add(cube);
+scene.add(cube)
 
 // create a function to render the scene
 const render = () => {
-// update the VR controls
-controls.update();
+  // update the VR controls
+  controls.update()
 
-// update the VR manager
-manager.render(scene, camera);
-};
+  // update the VR manager
+  manager.render(scene, camera)
+}
 
 // create a function to animate the scene
 const animate = () => {
-// request the next animation frame
-requestAnimationFrame(animate);
+  // request the next animation frame
+  requestAnimationFrame(animate)
 
-// render the scene
-render();
-};
+  // render the scene
+  render()
+}
 
 // start animating the scene
-animate();
-
+animate()
 ```
+
 <p>
-This code creates a simple VR experience that consists of a green cube that the user can view using a VR headset. You can then build on this foundation by adding more objects and features to the scene, and using the VRControls, VREffect, and VRManager objects to handle VR input, rendering, and display.
+  This code creates a simple VR experience that consists of a green cube that
+  the user can view using a VR headset. You can then build on this foundation by
+  adding more objects and features to the scene, and using the VRControls,
+  VREffect, and VRManager objects to handle VR input, rendering, and display.
 </p>
 ```
