--- a/_mdx/projects/frontend/simple-calculator.mdx
+++ b/_mdx/projects/frontend/simple-calculator.mdx
@@ -8,8 +8,7 @@ thumbId: GlavtG-umzE
 
 A calculator is a common tool that we use for basic arithmetic operations. In this project, you will create a simple calculator using vanilla JavaScript, HTML, and CSS.
 
-<h1>Create a Simple Calculator</h1>
-<h2>Requirements</h2>
+<h1>Project Checklist</h1>
 <ul>
   <li>A display for showing the result of calculations</li>
   <li>
@@ -17,7 +16,7 @@ A calculator is a common tool that we use for basic arithmetic operations. In th
   </li>
   <li>A way to clear the display and start a new calculation</li>
 </ul>
-<h2>Bonus</h2>
+<h2>Bonus Project Checklist Items</h2>
 <ul>
   <li>Can you add support for decimal numbers and the modulo operator?</li>
   <li>
